# sp1-zorch

./: .bazelrc  .gitignore  CLAUDE.md  MODULE.bazel  README.md  pyproject.toml  requirements.in  requirements_lock_3_11.txt
.github/: fractalyze-workflow.yaml
.github/workflows/: ci.yml  dev-release.yml  frx-update.yml  jax-update.yml
docs/: README.md  architecture.md  conventions.md  development.md  shard-pipeline.md  sp1-baseline.md  testing.md  zerocheck-protocol.md
sp1_zorch/: BUILD.bazel  __init__.py  testkit.py
sp1_zorch/commit/: BUILD.bazel  bench_preflight.py  bench_preflight_test.py  bench_smcs_open_verify.py  bench_trace_commit.py  region.py  region_test.py  smcs.py  smcs_sp1_ffi_test.py  smcs_test.py  trace_commit.py  trace_commit_test.py  verify_trace_commit.py  zorch_wiring_test.py
sp1_zorch/jagged/: BUILD.bazel  bench_jagged_eval_phases.py  gen_jagged_eval_golden.py  inner_marked_test.py  open.py  open_test.py  prover.py  prover_test.py  verifier.py  verifier_test.py
sp1_zorch/jagged/testdata/gpu_fibonacci/: meta.json
sp1_zorch/jagged/testdata/gpu_fibonacci/inputs/: bound_commitment_r0.npy  bound_commitment_r1.npy  challenger.npz  claims_r0.npy  claims_r1.npy  raw_root_r0.npy  raw_root_r1.npy
sp1_zorch/jagged/testdata/gpu_fibonacci/outputs/: batch_evals_r0.npz  batch_evals_r1.npz  challenger.npz  challenges.npz  component_openings_r0.npz  component_openings_r1.npz  dense_eval.npy  final_poly.npy  fri_commitments.npy  fri_raw_roots.npy  inner_claimed_sum.npy  inner_point.npy  inner_sumcheck_polys.npy  outer_sumcheck_claim.npy  outer_sumcheck_point.npy  outer_sumcheck_polys.npy  pow_witness.npy  query_openings_f0.npz  query_openings_f1.npz  query_openings_f10.npz  query_openings_f11.npz  query_openings_f12.npz  query_openings_f13.npz  query_openings_f14.npz  query_openings_f15.npz  query_openings_f16.npz  query_openings_f17.npz  query_openings_f18.npz  query_openings_f19.npz  query_openings_f2.npz  query_openings_f20.npz  query_openings_f3.npz  query_openings_f4.npz  query_openings_f5.npz  query_openings_f6.npz  query_openings_f7.npz  query_openings_f8.npz  query_openings_f9.npz  univariate_messages.npy
sp1_zorch/logup_gkr/: BUILD.bazel  bench_logup_gkr_phases.py  bench_sp1_logup_gkr.py  circuit.py  circuit_test.py  head.py  head_test.py  prover.py  prover_test.py  public_values.py  public_values_test.py  verifier.py  verifier_test.py  verify_first_layer.py  verify_gkr_prove.py  verify_gkr_recompile.py
sp1_zorch/poseidon2/: BUILD.bazel  koalabear16.py
sp1_zorch/shard_prover/: BUILD.bazel  chain_testkit.py  chip_loader.py  fixture_loader.py  fixture_loader_test.py  producer_loader.py  producer_loader_test.py  prove_shard.py  prove_shard_test.py  replay.py  rsp_dump_test.py  serialize.py  serialize_test.py  sp1_ffi.py  types.py  verify_prove_shard.py  verify_shard.py  verify_shard_fixture.py  verify_shard_test.py  warm_mode.py  warm_mode_test.py  warm_shard_cache.py  warm_worker.py
sp1_zorch/tools/: BUILD.bazel  sp1_baseline.py
sp1_zorch/zerocheck/: BUILD.bazel  __init__.py  _dense_carry.py  _dense_carry_test.py  _round_composite.py  _round_composite_test.py  bench_sp1_zerocheck.py  coeffs.py  coeffs_test.py  jagged.py  jagged_byte_match_test.py  jagged_test.py  probe_chip_compile.py  probe_round_compile.py  prover.py  prover_test.py  round.py  round_test.py  rw_fold_smoke.py  stage.py  stage_test.py  verifier.py  verifier_test.py  verify_zerocheck.py  verify_zerocheck_recompile.py  verify_zerocheck_test.py
sp1_zorch/zerocheck/testdata/gpu_fibonacci/: meta.json
sp1_zorch/zerocheck/testdata/gpu_fibonacci/inputs/: batching_challenge.npy  challenger.npz  chip_claims.npy  gkr_opening_batch_challenge.npy  lambda.npy  main_region.json  prep_region.json  public_values.npy  zeta.npy
sp1_zorch/zerocheck/testdata/gpu_fibonacci/outputs/: challenger.npz  chip_final_lens.npy  chip_final_states.npy  round_polys.npy  zc_sumcheck_point.npy
tools/fixture-gen/: BUILD.bazel  Cargo.toml  README.md  convert.py
tools/fixture-gen/src/: components.rs  driver.rs  emit.rs  main.rs  npy.rs  recorder.rs
