"""sp1-zorch — a lean SP1 prover built on zorch's scheme-agnostic blocks.

bzlmod module. bazel 9 dropped WORKSPACE, so dependencies and the hermetic
Python toolchain are declared here.

sp1-zorch consumes fractalyze/zorch (hashing + Merkle commitment + the rest of
the SNARK spine) and adds ONLY the SP1-specific glue: domain separator, verify
codes, heap proof layout, and the FFI byte-match against the SP1 reference
prover. Nothing SP1-specific belongs in zorch — it lives here.
"""

module(
    name = "sp1_zorch",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")

# zorch is not published on a Bazel registry; pin it from GitHub so CI builds
# are reproducible. For local dev against a working copy, add to .bazelrc.user
# (gitignored):
#   common --override_module=zorch=/abs/path/to/your/zorch/checkout
bazel_dep(name = "zorch", version = "0.0.0")
git_override(
    module_name = "zorch",
    remote = "https://github.com/fractalyze/zorch.git",
    # zorch main (#363: device-FS logup-GKR warm-prove routed through the fused
    # zorch.duplex_fs Fiat-Shamir kernel). The duplex_fs marker fuses only with a
    # jax wheel that carries the matching xla duplex_fs emitter (fractalyze/xla
    # #167, jax >= 0.10.0.dev20260703054857); an older wheel still proves
    # correctly but decomposes the FS hop into loop fusions. Keep the
    # requirements.in wheel set in lockstep with this pin — the wheel must match
    # the jax this zorch commit builds against, or the GPU codeword desyncs
    # (CPU-only CI can't catch it).
    commit = "478fd8c76c0253d4bcdf094cbb280f2b2ebdc9f0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # jax / jaxlib / zkx-cuda-pjrt are published on the Fractalyze index.
    extra_pip_args = ["--extra-index-url=https://fractalyze.github.io/pypi/simple/"],
    hub_name = "sp1_zorch_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock_3_11.txt",
)
use_repo(pip, "sp1_zorch_pip")
