load("@rules_python//python:defs.bzl", "py_library")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# Shared test helpers (composite-marker inline workaround for the zkx CPU
# emitter; see testkit.py). Tracked removal: fractalyze/sp1-zorch#62.
py_library(
    name = "testkit",
    testonly = True,
    srcs = ["testkit.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jax"),
    ],
)
