load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# SP1's single-matrix commitment over zorch's agnostic Merkle blocks.
py_library(
    name = "smcs",
    srcs = ["smcs.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "smcs_test",
    # large: merkle_commit composite runs the slow no-CompositeOp fallback under
    # the pinned jax. The b2a1582 pin's rolled Merkle reconstruct
    # (fractalyze/zorch#182/#184) enlarges the cold-compile graph, tipping the CI
    # runner past the medium (300s) ceiling (warm-local is ~136s). Back to small
    # once jax#164 lands in the pin.
    size = "large",
    srcs = ["smcs_test.py"],
    deps = [
        ":smcs",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# Bootstrap wiring proof — exercises sp1_zorch's params over zorch's engine
# through the cross-module dependency.
py_test(
    name = "zorch_wiring_test",
    size = "small",
    srcs = ["zorch_wiring_test.py"],
    deps = [
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# Jagged region packing for the SP1 trace commit.
py_library(
    name = "region",
    srcs = ["region.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jax"),
    ],
)

# Stacked RS-encode + SMCS commit of a packed region (SP1's jagged commit).
py_library(
    name = "trace_commit",
    srcs = ["trace_commit.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":region",
        ":smcs",
        "@zorch//zorch/coding:reed_solomon",
        requirement("jax"),
    ],
)

py_test(
    name = "region_test",
    size = "small",
    srcs = ["region_test.py"],
    deps = [
        ":region",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "trace_commit_test",
    # medium: poseidon2/merkle composites run the slow no-CompositeOp fallback
    # under the pinned jax (same reason as smcs_test).
    size = "medium",
    srcs = ["trace_commit_test.py"],
    deps = [
        ":region",
        ":smcs",
        ":trace_commit",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_binary(
    name = "verify_trace_commit",
    srcs = ["verify_trace_commit.py"],
    # Byte-match harness over a local rsp GPU-trace capture (~1.5 GB/shard) —
    # a runnable, not a unit test:
    #   bazel run //sp1_zorch/commit:verify_trace_commit -- \
    #       --shard_dir=/path/to/rsp_dump/shardN --stage=prep
    deps = [
        ":region",
        ":smcs",
        ":trace_commit",
        "//sp1_zorch/poseidon2:koalabear16",
        "//sp1_zorch/shard_prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# Absolute open/verify throughput (no SP1 FFI entry for paths -> no vs-SP1 A/B).
# GPU-only manual tool (bazel run), not a CI test — see the module docstring.
#   bazel run //sp1_zorch/commit:bench_smcs_open_verify -- --log-heights 16 18 20 22
py_binary(
    name = "bench_smcs_open_verify",
    srcs = ["bench_smcs_open_verify.py"],
    deps = [
        ":smcs",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("jax"),
        requirement("jax_cuda12_plugin"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zkbench"),
        requirement("zkx_cuda_pjrt"),
    ],
)
