load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# SP1's single-matrix commitment over zorch's agnostic Merkle blocks.
py_library(
    name = "smcs",
    srcs = ["smcs.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "smcs_test",
    # large: every case commits eagerly on tiny matrices, so eager poseidon2
    # recompiles its composite per call (see trace_commit.py) and zorch#182/#184's
    # rolled Merkle reconstruct makes that per-call graph large -- ~112s for the
    # suite locally. On a loaded CI runner the cold compile clears the medium
    # (300s) ceiling, so large gives the headroom. (jax#164's CompositeOp is in
    # the pin now; it does not shrink this eager-compile cost.)
    size = "large",
    srcs = ["smcs_test.py"],
    deps = [
        ":smcs",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# Jagged region packing for the SP1 trace commit.
py_library(
    name = "region",
    srcs = ["region.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jax"),
    ],
)

# Stacked RS-encode + SMCS commit of a packed region (SP1's jagged commit).
py_library(
    name = "trace_commit",
    srcs = ["trace_commit.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":region",
        ":smcs",
        "@zorch//zorch/coding:reed_solomon",
        requirement("jax"),
    ],
)

py_test(
    name = "region_test",
    size = "small",
    srcs = ["region_test.py"],
    deps = [
        ":region",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "trace_commit_test",
    # medium size, long timeout: the tests exercise the eager commit
    # (commit_region's default jit=False), where poseidon2 recompiles its
    # composite on every call -- a fixed per-call cost (see trace_commit.py's
    # module docstring), ~99s locally. Cold CI runs ~2-3x slower
    # (docs/testing.md), so the explicit long timeout keeps this heavy test off
    # the medium 300s cap (same reason smcs_test is large).
    size = "medium",
    timeout = "long",
    srcs = ["trace_commit_test.py"],
    deps = [
        ":region",
        ":smcs",
        ":trace_commit",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)
