load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# SP1's single-matrix commitment over zorch's agnostic Merkle blocks.
py_library(
    name = "smcs",
    srcs = ["smcs.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "smcs_test",
    # medium: commit/verify are jitted (smcs_test.py) so each compiles once per
    # shape instead of recompiling the poseidon2 composite per eager call -- ~50s
    # locally, within the 300s cap even at cold CI's ~2-3x (docs/testing.md).
    size = "medium",
    srcs = ["smcs_test.py"],
    deps = [
        ":smcs",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# Jagged region packing for the SP1 trace commit.
py_library(
    name = "region",
    srcs = ["region.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jax"),
    ],
)

# Stacked RS-encode + SMCS commit of a packed region (SP1's jagged commit).
py_library(
    name = "trace_commit",
    srcs = ["trace_commit.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":region",
        ":smcs",
        "@zorch//zorch/coding:reed_solomon",
        requirement("jax"),
    ],
)

py_test(
    name = "region_test",
    size = "small",
    srcs = ["region_test.py"],
    deps = [
        ":region",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "trace_commit_test",
    # medium: commits run through the jitted commit_region path
    # (trace_commit_test.py), compiling once per shape instead of recompiling the
    # poseidon2 composite per eager call -- ~43s locally, within the 300s cap
    # even at cold CI's ~2-3x (docs/testing.md).
    size = "medium",
    srcs = ["trace_commit_test.py"],
    deps = [
        ":region",
        ":smcs",
        ":trace_commit",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

