load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# SP1-schedule jagged evaluation-proof sumchecks (the sumcheck half of stage 5).
py_library(
    name = "prover",
    srcs = [
        "__init__.py",
        "prover.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch:fusion",
        "@zorch//zorch:round",
        "@zorch//zorch:transcript",
        "@zorch//zorch/pcs/jagged:poly",
        "@zorch//zorch/poly:poly",
        "@zorch//zorch/sumcheck:sumcheck",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "inner_marked_test",
    # small: jaxpr/lowering inspection of a tiny instance, no fixture, no GPU.
    size = "small",
    srcs = ["inner_marked_test.py"],
    deps = [
        ":prover",
        "//sp1_zorch/shard_prover:replay",
        "@zorch//zorch/pcs/jagged:poly",
        "@zorch//zorch/sumcheck:sumcheck",
        "@zorch//zorch/testkit:transcript",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "prover_test",
    # large: the 48-round BP sumcheck over 1726 columns compiles + runs ~20s CPU.
    size = "large",
    srcs = ["prover_test.py"],
    data = glob(["testdata/gpu_fibonacci/**"]) + [
        "//sp1_zorch/zerocheck:shard_dense_fixture",
    ],
    deps = [
        ":prover",
        "@zorch//zorch:round",
        "@zorch//zorch:transcript",
        "@zorch//zorch/testkit:transcript",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# Golden generator for the zkx CPU codegen test (cpu_kernel_emitter_sumcheck_
# jagged_eval_unittest). Prints a C++ header; not part of any test.
py_binary(
    name = "gen_jagged_eval_golden",
    srcs = ["gen_jagged_eval_golden.py"],
    deps = [
        ":prover",
        "//sp1_zorch/poseidon2:koalabear16",
        "//sp1_zorch/shard_prover:replay",
        "@zorch//zorch:transcript",
        "@zorch//zorch/pcs/jagged:poly",
        "@zorch//zorch/poly:poly",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# Isolated phase benchmark for the jagged-eval stage (no full shard proof).
# GPU: deps jax_cuda12_plugin + zkx_cuda_pjrt and run with JAX_PLATFORMS=cuda,
# else jax silently falls back to CPU.
py_binary(
    name = "bench_jagged_eval_phases",
    srcs = ["bench_jagged_eval_phases.py"],
    data = glob(["testdata/gpu_fibonacci/**"]) + [
        "//sp1_zorch/zerocheck:shard_dense_fixture",
    ],
    deps = [
        ":prover",
        "//sp1_zorch/poseidon2:koalabear16",
        "//sp1_zorch/shard_prover:replay",
        "@zorch//zorch:transcript",
        "@zorch//zorch/hash/poseidon2",
        "@zorch//zorch/pcs/jagged:poly",
        requirement("jax"),
        requirement("jax_cuda12_plugin"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zkx_cuda_pjrt"),
    ],
)

# SP1 jagged-eval verifier: the stage-4 dual's sumcheck and stacked-open
# halves on zorch verifier blocks.
py_library(
    name = "verifier",
    srcs = ["verifier.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":open",
        ":prover",
        "//sp1_zorch/commit:smcs",
        "@zorch//zorch:transcript",
        "@zorch//zorch:verify",
        "@zorch//zorch/coding:reed_solomon",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/pcs:fold",
        "@zorch//zorch/pcs/basefold",
        "@zorch//zorch/pcs/jagged:poly",
        "@zorch//zorch/poly:poly",
        "@zorch//zorch/sumcheck",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "verifier_test",
    # large/eternal: one four-stage prover run plus eleven stage-4 dual
    # replays, all eager poseidon2 on CPU (~9 min locally).
    size = "large",
    timeout = "eternal",
    srcs = ["verifier_test.py"],
    deps = [
        ":verifier",
        "//sp1_zorch/shard_prover:chain_testkit",
        "//sp1_zorch/shard_prover:prove_shard",
        "//sp1_zorch/shard_prover:verify_shard",
        "@zorch//zorch/coding:reed_solomon",
        "@zorch//zorch/testkit:transcript",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# SP1-schedule stacked BaseFold open (the open half of stage 5).
py_library(
    name = "open",
    srcs = [
        "__init__.py",
        "open.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//sp1_zorch/commit:smcs",
        "@zorch//zorch:transcript",
        "@zorch//zorch/coding:reed_solomon",
        "@zorch//zorch/pcs/basefold",
        "@zorch//zorch/poly",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "open_test",
    # enormous + manual: byte-matches the real fibonacci-scale open — RS-encode
    # (2^23 FFT) plus per-round + 21 FRI fold-layer SMCS commits over millions of
    # leaves. ~25 min on CPU because the open runs eagerly (no enclosing @jit, the
    # same deferral as trace_commit), so the poseidon2/merkle commits pay eager
    # dispatch. The fast path — wrap the commit phase in one @jit so CompositeOp
    # fuses it — is gated on the jax pin carrying CompositeOp (jax#164), same as
    # trace_commit; until then jit-wrapping it would blow the compile past the
    # timeout. Tagged `manual` to stay out of the `//...` CI sweep — run on demand:
    #   bazel test //sp1_zorch/jagged:open_test
    # The sibling sumcheck half (prover_test) is the fast in-CI byte-match.
    size = "enormous",
    tags = ["manual"],
    srcs = ["open_test.py"],
    data = glob(["testdata/gpu_fibonacci/**"]) + [
        "//sp1_zorch/zerocheck:shard_dense_fixture",
    ],
    deps = [
        ":open",
        "//sp1_zorch/commit:smcs",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch:transcript",
        "@zorch//zorch/coding:reed_solomon",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)
