load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# SP1-aligned LogUp-GKR: interaction fingerprinting + first layer over
# zorch's jagged GKR blocks, and the layered prove threading the duplex
# transcript.
py_library(
    name = "logup_gkr",
    srcs = [
        "__init__.py",
        "circuit.py",
        "prover.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//sp1_zorch/commit:region",
        "@zorch//zorch:transcript",
        "@zorch//zorch/logup_gkr",
        "@zorch//zorch/poly",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "circuit_test",
    size = "small",
    srcs = ["circuit_test.py"],
    deps = [
        ":logup_gkr",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/shard_prover",
        requirement("absl_py"),
        requirement("jax"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "prover_test",
    size = "medium",
    srcs = ["prover_test.py"],
    deps = [
        ":logup_gkr",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/shard_prover",
        "@zorch//zorch:round",
        "@zorch//zorch:transcript",
        "@zorch//zorch/logup_gkr",
        "@zorch//zorch/poly",
        "@zorch//zorch/testkit:transcript",
        "@zorch//zorch/utils:bits",
        requirement("absl_py"),
        requirement("jax"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

# rsp byte-match harness over a local GPU-trace capture — a runnable, not a
# unit test (same convention as //sp1_zorch/commit:verify_trace_commit):
#   bazel run //sp1_zorch/logup_gkr:verify_first_layer -- \
#       --shard_dir=/path/to/rsp_dump/shardN
py_binary(
    name = "verify_first_layer",
    srcs = ["verify_first_layer.py"],
    deps = [
        ":logup_gkr",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/shard_prover",
        "@zorch//zorch/poly",
        "@zorch//zorch/utils:bits",
        requirement("absl_py"),
        requirement("jax"),
        requirement("jax_cuda12_plugin"),
        requirement("zk_dtypes"),
        requirement("zkx_cuda_pjrt"),
    ],
)

# rsp byte-match for the full layered GKR prove (preamble transcript ->
# grind -> challenges -> circuit -> per-layer sumcheck stream):
#   bazel run //sp1_zorch/logup_gkr:verify_gkr_prove -- \
#       --shard_dir=/path/to/rsp_dump/shardN
py_binary(
    name = "verify_gkr_prove",
    srcs = ["verify_gkr_prove.py"],
    deps = [
        ":logup_gkr",
        "//sp1_zorch/shard_prover",
        "//sp1_zorch/shard_prover:replay",
        "@zorch//zorch:transcript",
        "@zorch//zorch/utils:bits",
        requirement("absl_py"),
        requirement("jax"),
        requirement("jax_cuda12_plugin"),
        requirement("zk_dtypes"),
        requirement("zkx_cuda_pjrt"),
    ],
)

# LogUp-GKR stage phase ablation over a local rsp capture. GPU manual tool
# (bazel run), not a CI test — needs the external shard dump:
#   bazel run //sp1_zorch/logup_gkr:bench_logup_gkr_phases -- \
#       --shard-dir=/path/to/rsp_dump/shardN
py_binary(
    name = "bench_logup_gkr_phases",
    srcs = ["bench_logup_gkr_phases.py"],
    deps = [
        ":logup_gkr",
        "//sp1_zorch/shard_prover",
        "//sp1_zorch/shard_prover:replay",
        "@zorch//zorch:round",
        "@zorch//zorch:transcript",
        "@zorch//zorch/logup_gkr",
        "@zorch//zorch/poly",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("jax_cuda12_plugin"),
        requirement("zk_dtypes"),
        requirement("zkbench"),
        requirement("zkx_cuda_pjrt"),
    ],
)

# SP1-shaped LogUp-GKR benchmark over zorch's agnostic dense prover.
# GPU-only manual tool (bazel run), not a CI test — see the module docstring.
py_binary(
    name = "bench_sp1_logup_gkr",
    srcs = ["bench_sp1_logup_gkr.py"],
    deps = [
        "@zorch//zorch/logup_gkr",
        "@zorch//zorch/logup_gkr/testing",
        "@zorch//zorch/testkit:transcript",
        requirement("jax"),
        requirement("jax_cuda12_plugin"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zkbench"),
        requirement("zkx_cuda_pjrt"),
    ],
)
