load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# Shard prover input loading: SP1 GPU-dump fixtures + rw_constraints chips.
py_library(
    name = "shard_prover",
    srcs = [
        "chip_loader.py",
        "fixture_loader.py",
        "types.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jax"),
        requirement("numpy"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

# Shared scaffolding for the verify_* byte-match runnables: SP1's duplex
# challenger, the shard preamble stream, and the core-machine jagged regions.
py_library(
    name = "replay",
    srcs = ["replay.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":shard_prover",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch:transcript",
        "@zorch//zorch/hash/poseidon2",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "fixture_loader_test",
    size = "small",
    srcs = ["fixture_loader_test.py"],
    deps = [
        ":shard_prover",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_binary(
    name = "verify_shard_fixture",
    srcs = ["verify_shard_fixture.py"],
    # Fixture check over a local rsp GPU-trace capture (~1.5 GB/shard) — a
    # runnable, not a unit test:
    #   bazel run //sp1_zorch/shard_prover:verify_shard_fixture -- \
    #       --shard_dir=/path/to/rsp_dump/shardN
    deps = [
        ":shard_prover",
        requirement("absl_py"),
        requirement("zk_dtypes"),
    ],
)
